<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.settings">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp">
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/contactus"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/textcolor"
            />
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="right"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problems"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/black"
            android:layout_marginRight="@dimen/_15sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/textcolor"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/_20sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/black"
            android:layout_marginRight="@dimen/_15sdp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/changelowestprice"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/textcolor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/changerecevingtime"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/textcolor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/changedeleviry"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/textcolor"
            />
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="right"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/logout"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/textcolor"
            />
        <ImageView
            android:layout_width="@dimen/_132sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="right"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="right"
            android:paddingRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/snapchat"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/youtube"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/twitter"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/facebook"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

</FrameLayout>