<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.login">
      <include layout="@layout/appbar"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/_30sdp"
          android:gravity="center"
          android:layout_marginTop="@dimen/_5sdp"
          android:textSize="@dimen/_12ssp"
          android:textColor="@android:color/black"
          android:text="@string/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/phonenum"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:background="@drawable/inputback"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:background="@drawable/inputback"
            />
    </LinearLayout>
    <Button
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/login"
        android:id="@+id/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/buttonback"/>
</LinearLayout>